--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -10228,7 +10228,7 @@ a.text-dark:hover, a.text-dark:focus {
 /*# sourceMappingURL=bootstrap.css.map */
 
 body {
-  background: url('../img/cocina2.jpg') no-repeat center center fixed;
+  background: url('../img/yaya.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
